--- a/sample-nodejs-merger/package.json
+++ b/sample-nodejs-merger/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nodemon": "^3.1.11"
+    "@types/papaparse": "^5.5.2",
+    "nodemon": "^3.1.11",
+    "papaparse": "^5.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
