--- a/express-js-personal-website/package.json
+++ b/express-js-personal-website/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/papaparse": "^5.5.2",
         "express": "^5.2.1",
+        "morgan": "^1.10.1",
         "nodemon": "^3.1.11",
         "papaparse": "^5.5.3"
     },
