--- a/express-js-personal-website/package.json
+++ b/express-js-personal-website/package.json
@@ -14,7 +14,8 @@
         "express": "^5.2.1",
         "morgan": "^1.10.1",
         "nodemon": "^3.1.11",
-        "papaparse": "^5.5.3"
+        "papaparse": "^5.5.3",
+        "pug": "^3.0.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.2",
