--- a/express-js-personal-website/package.json
+++ b/express-js-personal-website/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/papaparse": "^5.5.2",
+        "ejs": "^3.1.10",
         "express": "^5.2.1",
         "morgan": "^1.10.1",
         "nodemon": "^3.1.11",
