--- a/express-js-personal-website/.vscode/settings.json
+++ b/express-js-personal-website/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
- "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "editor.formatOnPaste": false,  
-  "prettier.useEditorConfig": false,
+  "editor.formatOnPaste": false,
   "prettier.useTabs": false,
-  "prettier.configPath": ".prettierrc.json",
+  "prettier.configPath": ".prettierrc.json"
 }
