--- a/express-js-personal-website/.vscode/settings.json
+++ b/express-js-personal-website/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "editor.formatOnPaste": false,
+  "editor.formatOnPaste": true,
   "prettier.useTabs": false,
   "prettier.configPath": ".prettierrc.json"
 }
