--- a/express-js-personal-website-with-db/package.json
+++ b/express-js-personal-website-with-db/package.json
@@ -29,6 +29,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "sequelize": "^6.6.5"
   }
