--- a/express-js-personal-website-with-db/package.json
+++ b/express-js-personal-website-with-db/package.json
@@ -24,8 +24,11 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.18.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
